# Hospital

./: CMakeLists.txt
Debug/: Hospital1  makefile
Debug/src/: diseases.d  hospital.d  parse.d  structure.d  structure_test.d  subdir.mk  test.d
src/: Makefile  diseases.c  diseases.h  hospital.c  hospital.h  hospital.tar  parse.c  parse.h  structure.c  structure.h  structure_test.c  structure_test.h  test.c  test.h  test.sh  tests.tgz  vg.sh
